--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: perl6
 sudo: false
 perl6:
   - latest
-  - '2020.11'
+  - '2020.12'
 install:
   - rakudobrew build zef
   - zef --depsonly install .
 script:
-  - prove -ve "perl6 -I."
+  - prove -ve "raku -I."
   - zef install .
