--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 ; dist.ini
-name = CSS::Declarations
+name = CSS::Properties
 
 [ReadmeFromPod]
 ; if you want to disable generating README.md from main module's pod, then:
