--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
           - macOS-latest
           - windows-latest
         raku-version:
-          - 'latest'
+        #  - 'latest'
           - '2020.05.1'
     runs-on: ${{ matrix.os }}
     steps:
